--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.1",
+    "@fontsource/poppins": "^5.2.7",
     "@mui/icons-material": "^7.2.0",
     "@mui/material": "^7.2.0",
     "cra-template-pwa": "2.0.0",
